syntax = "proto3";

package elca.ntig.partnerapp.common.proto;

option java_multiple_files = true;
option java_package = "elca.ntig.partnerapp.common.proto.enum.person";

enum MaritalStatus {
    NULL_MARITAL_STATUS = 0;
    SINGLE = 1;
    MARRIED = 2;
    DIVORCED = 3;
    WIDOWED = 4;
    SEPARATED = 5;
    UNKNOWN = 6;
}